# md-client

./: .env  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FEATURE_COMPARISON.md  LICENSE  README.md  TASKS.md  TDD_TRACKER.md  USER_GUIDE.md  VERSION_BUMP_GUIDE.md  index.html  package-lock.json  package.json  stats.html  tsconfig.json  vite.config.ts  vitest.config.ts
.chglog/: CHANGELOG.tpl.md  config.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  e2e.yml  release.yml
deploy/: README.html  installer.nsi
docs/: AI_EDITING_SYSTEM_DESIGN.md  AUDIT_20260415_usability_review_v2.md  DIAGNOSTIC_REPORT.md  DIAGNOSTIC_REVIEW_20260413.md  EVALUATION_MARKLITE_USABILITY_大虾.md  EVALUATION_MARKLITE_USABILITY_小呆瓜.md  EVALUATION_UX_V090.md  FEATURE_COMPARISON.md  MarkLite-调研报告-20260411.md  MarkLite_v0.7实施计划.md  PLUGIN_DEV.md  USER_GUIDE.md
docs/CODEMAPS/: ARCHITECTURE.md  INDEX.md  backend.md  frontend.md  integrations.md
docs/assets/: mermaid-test.md
docs/guides/: FEATURE_COMPARISON.md  PLUGIN_DEV.md  PLUGIN_REFERENCE.md  SETUP_UBUNTU.md  USER_GUIDE.md  VERSION_BUMP_GUIDE.md
e2e-tests/: .gitignore  package.json  wdio.conf.js
e2e-tests/specs/: command-palette.e2e.js  editor.e2e.js  focus-typewriter.e2e.js  formatting.e2e.js  multi-cursor.e2e.js  plugins.e2e.js  preview-rendering.e2e.js  search.e2e.js  settings.e2e.js  sidebar.e2e.js  smoke.e2e.js  status-bar.e2e.js  tabs.e2e.js  toolbar-buttons.e2e.js  undo-redo.e2e.js  view-modes.e2e.js  welcome.e2e.js
scripts/: build-plugins.mjs  create-zip.js  update-imports.js
scripts/create-marklite-plugin/: create-plugin.js
src/: App.css  App.tsx  constants.ts  main.tsx  plugin-shared.ts  test-setup.ts  types.ts  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  default.json5
src-tauri/icons/: icon.icns
src-tauri/src/: context_menu.rs  export_docx.rs  export_pdf.rs  git.rs  lib.rs  main.rs  markdown_preprocess.rs  search.rs
src-tauri/src/commands/: editor_tools.rs  mod.rs  shell.rs
src-tauri/wix/: remove-stale-shortcuts.wxs
src/__mocks__/: tauri-dialog.ts  tauri-fs.ts  tauri-updater.ts
src/__tests__/: README.md
src/components/: AIResultModal.tsx  AboutModal.tsx  ActivityBar.tsx  AppGlobalOverlays.tsx  AppProviders.tsx  AppShell.tsx  CommandPalette.tsx  CrossFileSearch.tsx  CssTemplateManager.tsx  CustomCssEditor.tsx  DragOverlay.tsx  EditorContentArea.tsx  EditorContextMenu.tsx  FileChangeToast.tsx  FileMenuDropdown.tsx  FileTreeContextMenu.tsx  (+31 more)
(+722 files in other folders)
