[package]
name = "marklite"
version = "0.10.2"
description = "A lightweight Markdown editor built with Tauri, React, and CodeMirror"
authors = ["lin51kevin"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.7"
tauri-plugin-fs = { version = "2.5", features = ["watch"] }
tauri-plugin-updater = "2"
pulldown-cmark = { version = "0.12", features = ["html"] }
md-5 = "0.10"
docx-rs = "0.4"
genpdf = { version = "0.2", features = ["images"] }
base64 = "0.22"
image = { version = "0.23", default-features = false, features = ["png", "jpeg"] }
emojis = "0.8.0"
regex = "1"
encoding_rs = "0.8"
chardetng = "0.1"

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true        # Strip debug symbols
lto = true           # Link-time optimization
codegen-units = 1    # Maximize optimization (slower build)
opt-level = "s"      # Optimize for size
